// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Channel can pass nothing to effect functions 1`] = `
Array [
  Array [
    Array [],
    Array [],
  ],
  Array [
    Array [],
    Array [],
  ],
]
`;

exports[`Channel can pass variable arguments to effect functions 1`] = `
Array [
  Array [
    Array [
      1,
      2,
    ],
    Array [
      3,
      4,
    ],
  ],
  Array [
    Array [
      1,
      2,
    ],
    Array [
      3,
      4,
    ],
  ],
]
`;

exports[`Channel can remove an effect during emit 1`] = `
Array [
  Array [
    Array [],
  ],
]
`;

exports[`Channel when an effect is added with .once() only calls the effect once 1`] = `Array []`;
